<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#EFFEED">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutFirst"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivItemAddTodo"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:contentDescription="TODO"
            android:src="@drawable/item_book"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvItemCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Item"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/ivItemAddTodo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/quicksand_bold"
            android:text="Title"
            android:textColor="@color/end_utama_gradient"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivItemAddTodo" />

        <TextView
            android:id="@+id/tvTitleDa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="4dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/quicksand_medium"
            android:text="Bermain Mobile Legend"
            android:textColor="#9F9F9F"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/description"
            android:textColor="@color/end_utama_gradient"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitleDa" />

        <TextView
            android:id="@+id/tvDescDa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="4dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/quicksand_medium"
            android:text="jam 15.00"
            android:textColor="#9F9F9F"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/tanggal"
            android:textColor="@color/end_utama_gradient"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDescDa" />

        <TextView
            android:id="@+id/tvDateDa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="4dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/quicksand_medium"
            android:text="01-01-2021"
            android:textColor="#9F9F9F"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <TextView
            android:id="@+id/tvPriority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/priority"
            android:textColor="@color/end_utama_gradient"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDateDa" />

        <TextView
            android:id="@+id/tvPriorityDa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="4dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/quicksand_medium"
            android:text="Normal"
            android:textColor="#9F9F9F"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvPriority" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutFirst">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnEditDa"
            android:layout_width="150dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:background="@drawable/bg_button_add"
            android:fontFamily="@font/quicksand_medium"
            android:text="Edit"
            android:textColor="@color/background_cardview" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnDeleteDa"
            android:layout_width="150dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginStart="50dp"
            android:background="@drawable/bg_button_add"
            android:fontFamily="@font/quicksand_medium"
            android:text="Delete"
            android:textColor="@color/background_cardview" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnUpdateDa"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:background="@drawable/bg_button_add"
            android:fontFamily="@font/quicksand_medium"
            android:text="Update"
            android:textColor="@color/background_cardview"
            android:visibility="gone" />


    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>